# ebook-wgpu-lighting

./: Cargo.toml  README.md
examples/ch01/: blinn_phong_cube.rs  blinn_phong_frag.wgsl  blinn_phong_sphere.rs  blinn_phong_torus.rs  common_blinn_phong.rs  shader_vert.wgsl
examples/ch02/: directional_light.rs
examples/ch03/: fog_effect.rs  fog_frag.wgsl  point_frag.wgsl  point_light.rs
examples/ch04/: soft_spot_frag.wgsl  soft_spot_light.rs  spot_frag.wgsl  spot_light.rs
examples/ch05/: pbr.rs  pbr_frag.wgsl
examples/ch06/: shadow.rs  shadow_frag.wgsl
src/: common_instance.rs  lib.rs
